asterisk (1:1.3.99~beta2.dfsg-1) UNRELEASED; urgency=low

  * (NOT RELEASED YET) New upstream release (1.4 beta)
  * Sandbox to start playing with 1.4, it uses autotools :-), 
    it also uses ASTDATADIR :-) :-)
  * need to understand this menuselect and how to encorporate into debian.
  * need to discuss with upstream iLBC conflict with GPL

 -- Mark Purcell <msp@debian.org>  Mon, 25 Sep 2006 08:46:16 +0100

asterisk (1:1.2.12.1.dfsg-2) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Mark Purcell <msp@debian.org>  Sun, 24 Sep 2006 15:48:34 +0100

asterisk (1:1.2.12.1.dfsg-1) unstable; urgency=low

  [ Tzafrir Cohen ]
  * New upstream release
  * bristuff.dpatch: version adapted.
  * apprecord_sprintf.dpatch removed: already applied.

  [ Mark Purcell ]
  * binary blob in asterisk-classic package (Closes: #386361)
  * Cleanup bristuff.dpatch

 -- Mark Purcell <msp@debian.org>  Sun, 24 Sep 2006 14:45:58 +0100

asterisk (1:1.2.11.dfsg-1) unstable; urgency=high

  [ Tzafrir Cohen]
  * apprecord_sprintf.dpatch: fix format string issue in app_record.so .

  [ Mark Purcell ]
  * New Upstream Release
  * Urgency high as fixes CVE-2006-4346
  * CVE-2006-4346: Asterisk MGCP AUEP Response Handling Buffer
    Overflow (Closes: Bug#385060)
  * Please package Asterisk 1.2.11 and Zaptel 1.2.8 (Closes: #384283)
  * Better error handling on init.d reload, if asterisk isn't running
  * Lintian cleanup: not-binnmuable-any-depends-all
  * Lintian cleanup: not-binnmuable-all-depends-any
  * Use restart in asterisk_fix

 -- Mark Purcell <msp@debian.org>  Sat,  2 Sep 2006 13:01:02 +0100

asterisk (1:1.2.10.dfsg-3) unstable; urgency=low

  [ Kilian Krause ]
  * Add iaxy.bin to asterisk debs to have working IAX support.
  * asterisk_fix is included on the main asterisk package
    (Closes: Bug#287025, Bug#360233, Bug#381861)
  * Various fixes to asterisk_fix

  [ Mark Purcell ]
  * Remove Build-Depends: libgtk1.2-dev (only for asterisk-gtk)