@@ -4,12 +4,12 @@ Section: comm
 Maintainer: Debian VoIP Team <pkg-voip-maintainers@lists.alioth.debian.org>
 Uploaders: Mark Purcell <msp@debian.org>, Kilian Krause <kilian@debian.org>, Jose Carlos Garcia Sogo <jsogo@debian.org>, Santiago Garcia Mantinan <manty@debian.org>, Simon Richter <sjr@debian.org>, Tzafrir Cohen <tzafrir.cohen@xorcom.com>
 Standards-Version: 3.6.1
-Build-Depends: debhelper (>= 4.0.4), sed (>= 3.95), zlib1g-dev, libreadline5-dev, libgsm1-dev, libssl-dev, libzap-dev, libtonezone-dev (>= 1:1.2.3-1), bison, libasound2-dev, postgresql-dev, unixodbc-dev, libpri-dev (>= 1.2.3-1), dpatch (>= 2.0.10), zaptel-source (>= 1:1.2.3-1), autotools-dev, libnewt-dev, libsqlite-dev, libspeex-dev, graphviz, libcurl3-dev, doxygen, gsfonts, libpopt-dev, libopenh323-dev (>= 1.17.4-1)
+Build-Depends: debhelper (>= 4.0.4), sed (>= 3.95), zlib1g-dev, libreadline5-dev, libgsm1-dev, libssl-dev, libzap-dev, libtonezone-dev (>= 1:1.2.3-1), bison, libasound2-dev, postgresql-dev, unixodbc-dev, libpri-dev (>= 1.2.3-1), dpatch (>= 2.0.10), zaptel-source (>= 1:1.2.3-1), autotools-dev, libnewt-dev, libsqlite-dev, libspeex-dev, graphviz, libcurl3-dev, doxygen, gsfonts, libpopt-dev, libopenh323-dev (>= 1.17.4-1), libiksemel-dev
 
 Package: asterisk
-Architecture: all
+Architecture: any
 Section: comm
-Depends: asterisk-classic (>= ${source:Version}) | asterisk-bristuff (>= ${source:Version}), adduser (>= 3.63)
+Depends: asterisk-config (= ${source:Version}) | asterisk-config-custom, adduser (>= 3.63), asterisk-sounds-main (>= 1:1.0.2)
 Conflicts: asterisk-oh323 (<= 0.6.6pre3-3)
 Suggests: gnomemeeting, ekiga, ohphone, kphone, asterisk-doc, asterisk-dev, asterisk-rate-engine
 Description: Open Source Private Branch Exchange (PBX)
@@ -30,66 +30,7 @@ Description: Open Source Private Branch Exchange (PBX)
   * Tormenta Dual T1 card (http://www.bsdtelephony.com.mx)
   * CAPI compatible ISDN cards can be run using the add-on package chan-capi
  .
- This Debian package includes the sample configuration, with demonstration
- extensions, etc
- .
- Website: http://www.asterisk.org.
-
-Package: asterisk-classic
-Architecture: any
-Section: comm
-Depends: ${shlibs:Depends}, asterisk (= ${source:Version}), asterisk-config (= ${source:Version}) | asterisk-config-custom, adduser (>= 3.63), asterisk-sounds-main (>= 1:1.0.2)
-Conflicts: asterisk-bristuff
-Description: Open Source Private Branch Exchange (PBX) - original Digium version
- Asterisk is an Open Source PBX and telephony toolkit.  It is, in a
- sense, middleware between Internet and telephony channels on the bottom,
- and Internet and telephony applications at the top.
- .
- Asterisk can be used with Voice over IP (SIP, H.323, IAX) standards, or the 
- Public Switched Telephone Network (PSTN) through Supported Hardware.
- .
- Supported hardware:
- .
-  * All Wildcard (tm) products from Digium (http://www.digium.com)
-  * QuickNet Internet PhoneJack and LineJack (http://www.quicknet.net)
-  * Full Duplex Sound Card supported by Linux
-  * Adtran Atlas 800 Plus
-  * ISDN4Linux compatible ISDN card
-  * Tormenta Dual T1 card (http://www.bsdtelephony.com.mx)
-  * CAPI compatible ISDN cards can be run using the add-on package chan-capi
- .
- This Debian package includes the sample configuration, with demonstration
- extensions, etc
- .
- Website: http://www.asterisk.org.
-
-Package: asterisk-bristuff
-Architecture: any
-Section: comm
-Depends: ${shlibs:Depends}, asterisk (= ${source:Version}), asterisk-config (= ${source:Version}) | asterisk-config-custom, adduser (>= 3.63), asterisk-sounds-main (>= 1:1.0.2)
-Conflicts: asterisk-classic
-Description: Open Source Private Branch Exchange (PBX) - BRIstuff-enabled version
- Asterisk is an Open Source PBX and telephony toolkit.  It is, in a
- sense, middleware between Internet and telephony channels on the bottom,
- and Internet and telephony applications at the top.
- .
- The BRIstuff patch from www.junghanns.net enables support from certain
- hardware like HFC ISDN cards which are mainly consumer hardware.
- .
- Asterisk can be used with Voice over IP (SIP, H.323, IAX) standards, or the 
- Public Switched Telephone Network (PSTN) through Supported Hardware.
- .
- Supported hardware:
- .
-  * All Wildcard (tm) products from Digium (http://www.digium.com)
-  * QuickNet Internet PhoneJack and LineJack (http://www.quicknet.net)
-  * Full Duplex Sound Card supported by Linux
-  * Adtran Atlas 800 Plus
-  * ISDN4Linux compatible ISDN card
-  * Tormenta Dual T1 card (http://www.bsdtelephony.com.mx)
-  * CAPI compatible ISDN cards can be run using the add-on package chan-capi
- .
- This Debian package includes the sample configuration, with demonstration
+ This is the main package that includes the asterisk daemon.
  extensions, etc
  .
  Website: http://www.asterisk.org.
